--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <p>
           I collaborated in the translation of a few published programming 
           and technology articles in freecodecamp Spanish, from 2012 to 2021.
-           You may contact me at my email noiroup@gmail.com
+           You can contact me at my email noiroup@gmail.com
           
         </p>
       </section>
