--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <li><a href="#projects" class="nav-link">Projects</a></li>
               <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
-            <button class="burger-menu" id="burger-menu">
+            <button class="menu" id="menu">
               <ion-icon class="bars" name="menu-outline"></ion-icon>
             </button>
       </nav>
