--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@
   
     
   
-   <div class="socials">
+  <-- <div class="socials">
      <a href="https://twitter.com/Otsonoir" target="_blank"
       ><img
         src="assets/icons/twitter.png"
         alt="Twitter"
         loading="lazy"
         class="socicon"
-     /></a>
+     /></a> -->
      <a href="https://www.linkedin.com/in/sil-z-00aa011a5/" target="_blank"
       ><img
         src="assets/icons/linkedln.png"
