--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           class="icon icon-card"
         />
         <img
-          src="assets/icons/icons8-git.svg"
+          src="assets/icons/github.png"
           alt=""
           loading="lazy"
           class="icon icon-card"
