--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
       <section class="hero" id="about">
         <img
-          src="assets/images/wfh_1.svg"
-          alt="Greetings"
+          src=""
+          alt=""
           loading="lazy"
           class="hero-img"
         />
