--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <section class="hero" id="about">
         <img
-          src=""
+          src="Collage.png"
           alt=""
           loading="lazy"
           class="hero-img"
