--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           class="hero-img"
         />
         <div class="bio animate__animated animate__shakeX">
-          <h2 class="bio-title">About Me</h2>
+          <h2 class="bio-title"></h2>
           <p class="bio-text">
             I am a Front-End Developer/translator passionate about web development,
              programming and technologies, and all this brings to our everyday.
@@ -61,7 +61,7 @@
         </section>
 
      <section class="more-about">
-       <h2>More About Me</h2>
+       <h2>About Me</h2>
         <p>
           I been working in responsive Front-End Development, I like to focus in the simply design 
           that allow the navigation to get and access to the information,
@@ -201,7 +201,7 @@
     <p class="copy">
       Built by
       <a href="https://twitter.com/Otsonoir" target="_blank"
-        >Sil</a
+        ></a
       >
     </p>
    </footer>
