--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
     <p class="copy">&copy; Copyright 2023</p>
     <p class="copy">
       Built by
-      <a href="https://twitter.com/Otsonoir" target="_blank"
-        ></a
+      <a href="https://www.linkedin.com/in/sil-z-00aa011a5/" target="_blank"
+        >Noiroup</a
       >
     </p>
    </footer>
