--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
           
       <nav>
-            <h1>Portafolio</h1>
+            <h1>Sil Zubikarai</h1>
             <ul class="navigation">
               <li><a href="#about" class="nav-link">About</a></li>
               <li><a href="#skills" class="nav-link">Skills</a></li>
