--- a/index.html
+++ b/index.html
@@ -161,18 +161,18 @@
           Gaming Survey quality web page.
           
         </p>
-        <a href="https://codepen.io/Otso/full/ZEYWWNo" target="_blank" class="project-link">Check it Out</a>
+        <a href="https://codepen.io/Noiroup/pen/mdgWazJ" target="_blank" class="project-link">Check it Out</a>
       </div>
       <div class="project-container project-card">
         <img
-          src="assets/img/animationstars.png"
-          alt="animation-stars"
+          src="assets/img/browseform.png"
+          alt="Login form"
           loading="lazy"
           class="project-pic"
         />
         <h3 class="project-title">Animation Stars</h3>
         <p class="project-details">
-          Web page with animated stars.
+          Login form and browser charge files.
         </p>
         <a href="https://codepen.io/Otso/full/GRxaOvb" target="_blank" class="project-link">Check it Out</a>
        </div>
