--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           loading="lazy"
           class="project-pic"
         />
-        <h3 class="project-title">Animation Stars</h3>
+        <h3 class="project-title">Login Form</h3>
         <p class="project-details">
           Login form and browser charge files.
         </p>
