--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
            You can contact me at my email noiroup@gmail.com
           
         </p>
+       <p>
+         Work Experience
+        Worked as a Client Attention, where I provided excellent customer service and support to
+        clients. Assisted customers with inquiries, resolved issues, and ensured customer satisfaction. Utilized strong
+        communication and problem-solving skills to address customer needs and build positive relationships.
+       </p>
       </section>
   
      <section class="skills" id="skills">
