--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <p class="copy">
       Built by
       <a href="https://www.linkedin.com/in/sil-z-00aa011a5/" target="_blank"
-        >Sil</a
+        >Noiroup</a
       >
     </p>
    </footer>
