--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
       />
-      <title>Sil Zubikarai| Front-End Developer</title>
+      <title>Front-End Developer</title>
   </head>
   <body>
           
