--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </p>
         <p>
         With a background in Systems Administration and Computer Systems Engineer. My skills are HTML, CSS JavaScript,
-        Python, jQuery, Linux, Git. I have more project published in <a href="https://codepen.io/Noiroup">Codepen.</a>
+        Python, jQuery, Linux, Git. I have more projects at <a href="https://codepen.io/Noiroup">Codepen.</a>
 
        </p>
         <p>
