--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           Collaborator on the translations of articles published programming 
           and technology in
           <a href="https://www.freecodecamp.org/espanol/news/author/sil/">FreeCodeCamp spanish</a> from 2021 to 2023.
-          Languages: English, Spanish, and I can read Portuguese.
+          Languages: English, Spanish.
            You can contact me at my email noiroup@gmail.com
           
         </p>
