--- a/index.html
+++ b/index.html
@@ -63,14 +63,15 @@
      <section class="more-about">
        <h2>More information</h2>
         <p>
-          I been working in responsive web development, I like to focus in the simply design 
-          that allow the navigation and get easy access to the sections of the web page.
+          Front-End Developer. Focus on the development of responsive, optimized websites, designed to make the end-user
+              experience.
             
           
         </p>
         <p>
         With a background in Systems Administration and Computer Systems Engineer. My skills are HTML, CSS JavaScript,
-        Python, jQuery, Linux, Git. I have more projects at <a href="https://codepen.io/Noiroup">Codepen.</a>
+        Python, jQuery, Linux, Git, also have knowlegde in computer networks.
+        I have more projects at <a href="https://codepen.io/Noiroup">Codepen.</a>
 
        </p>
         <p>
@@ -83,6 +84,9 @@
         </p>
        <p>
          Work Experience
+        Worked as technical Translator in articles about technology and programming.
+        Wroked building web projects.
+        Worked as technical support, hardware, software.
         Worked as a Client Attention, where I provided excellent customer service and support to
         clients. Assisted customers with inquiries, resolved issues, and ensured customer satisfaction. Utilized strong
         communication and problem-solving skills to address customer needs and build positive relationships.
