--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
      </section>
 
      <section class="projects" id="projects">
-       <h2 class="projects-title">Some of my Recent Projects</h2>
+       <h2 class="projects-title">Some of my Projects</h2>
       <div class="projects-container">
         <div class="project-container project-card">
           <img
