--- a/index.html
+++ b/index.html
@@ -84,8 +84,12 @@
         </p>
        <p>
          Work Experience
+       </p>
+       <p>
         Worked as technical Translator in articles about technology and programming.
-        Wroked building web projects.
+        Worked building web projects, like landing pages, forms, calculators, note taking, to-do list.
+       </p>
+       <p>
         Worked as technical support, hardware, software.
         Worked as a Client Attention, where I provided excellent customer service and support to
         clients. Assisted customers with inquiries, resolved issues, and ensured customer satisfaction. Utilized strong
