--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
           
       <nav>
             <h1>Front-End Developer/Translator</h1>
-            <ul class="navigation">
+            <ul class="nav">
               <li><a href="#about" class="nav-link">Home</a></li>
               <li><a href="#skills" class="nav-link">Skills</a></li>
               <li><a href="#projects" class="nav-link">Projects</a></li>
               
             </ul>
-            <button class="menu" id="menu">
+            <button class="menu">
               <ion-icon class="bars" name="menu-outline"></ion-icon>
             </button>
       </nav>
