--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <li><a href="#projects" class="nav-link">Projects</a></li>
               
             </ul>
-            <button class="menu">
+            <button class="burger-menu id="burger-menu">
               <ion-icon class="bars" name="menu-outline"></ion-icon>
             </button>
       </nav>
