--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               
             </ul>
             <button class="burger-menu id="burger-menu">
-              <ion-icon class="bars" name="menu-outline"></ion-icon>
+              <i class="fas fa-bars"></i>
             </button>
       </nav>
 
