--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           loading="lazy"
           class="hero-img"
         />
-        <div class="bio anim">
+        <div class="bio">
           <h2 class="bio-title">About Me</h2>
           <p class="bio-text">
             Greetings I'm a web developer/translator passionate about web development,
