--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           
         </p>
         <p>
-        With a background in Systems Administration and Computer Systems Engineer. My skills are HTML, CSS JavaScript,
+        With a background in Systems Administration and Computer Systems Engineer. My skills are HTML, CSS, JavaScript,
         Python, jQuery, Linux, Git.
         I have more projects at <a href="https://codepen.io/Noiroup">Codepen.</a>
 
@@ -90,7 +90,7 @@
       </p>
       <p>
         Worked building web projects, like landing pages, forms, calculators, note taking, to-do list.
-        Working on building projects with HTML, CSS, Javascript React, Wordpress, and Python.
+        Working on building projects with HTML, CSS, Javascript, React, Wordpress, and Python.
        </p>
        <p>
         Worked as technical support, helping with issues related hardware, software; also helping in the adquisition of hardware.
