--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
      <section class="more-about">
        <h2>More information</h2>
         <p>
-          Front-End Developer. Focus on the development of responsive, optimized websites, engagement interfaces designed to make the end-user
+          Front-End Developer. Focus on the development of responsive, optimized, minimalist websites, engagement interfaces designed to make the end-user
               experience.
             
           
